Github pages homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "info-site",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://morghan.github.io",
+	"homepage": "https://morghan.github.io/react-info-site/",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
